# moonshot-firefox

./: .gitattributes  .gitignore  Makefile.am  Makefile.in  MoonshotFirefox.sln  MoonshotFirefox.vcxproj  configure  configure.ac  install.js  install.rdf  nsHttpMoonshot.cpp  nsHttpMoonshot.h  nsHttpMoonshotModule.cpp  nsIHttpMoonshot.idl  nsMoonshotSessionState.cpp  nsMoonshotSessionState.h
debian/: changelog  control  copyright  rules
windows/: README.txt
